# analise_de_dados_enquete_cultural_curitiba

./: .gitignore  Analise_dados_culturais_notebook.ipynb  Dados_de_receita.csv  Dados_gerais.csv  Dados_relativos.csv  README.md  pyproject.toml
