[tool.poetry]
name = "analise_enquete"
version = "0.1.0"
description = ""
authors = ["Paulo <pauloestrella1994@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
notebook = "^6.4.0"
jupyter = "^1.0.0"
powerbiclient = "^1.0.0"
numpy = "^1.20.3"
pandas = "^1.2.4"
ipython = "^7.24.1"
matplotlib = "^3.4.2"
wordcloud = "^1.8.1"
nltk = "^3.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
